sonar fix issues