@@ -29,6 +29,12 @@ import java.time.temporal.ChronoUnit;
 @RequestMapping("/dashboard")
 public class DashboardController {
 
+    private static final String CARD_DATES = "dates";
+    private static final String CARD_PROGRESSION = "progression";
+    private static final String CARD_PROGRESSION_TEXTE = "progressionTexte";
+    private static final String CARD_STATUT_TEMPS = "statutTemps";
+    private static final String CARD_PROGRESS_PENDING = "En attente";
+
     private final UtilisateurService utilisateurService;
     private final ActiviteRepository activiteRepository;
     private final ChallengeRepository challengeRepository;
@@ -45,150 +51,168 @@ public class DashboardController {
     @GetMapping
     public String dashboard(Model model) {
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        
-        // Si l'utilisateur n'est pas authentifié, rediriger vers la page de login
-        if (authentication == null || !authentication.isAuthenticated()) {
+        if (!isAuthenticated(authentication)) {
             return "redirect:/Utilisateur/";
         }
 
-        String email = authentication.getName();
         try {
-            Utilisateur user = utilisateurService.trouverParEmail(email);
-            LocalDate aujourdhui = LocalDate.now();
-
+            Utilisateur user = utilisateurService.trouverParEmail(authentication.getName());
+            LocalDate aujourdHui = LocalDate.now();
             model.addAttribute("user", user);
-            model.addAttribute("level", user.getNiveauExperience());
-            model.addAttribute("xpBarPercent", user.getPourcentageBarreExperience());
-            model.addAttribute("xpDansNiveau", user.getXpDepuisSeuilNiveauExperience());
-            model.addAttribute("xpMaxNiveau", user.getXpSeuilProchainNiveauExperience());
-            model.addAttribute("hpBarPercent", (double) user.getHpNormalise());
-
             List<Activite> activitesUtilisateur = activiteRepository.findByUtilisateurOrderByDateDesc(user);
 
-            double totalKm = activitesUtilisateur.stream()
-                    .mapToDouble(a -> a.getDistance() != null ? a.getDistance() : 0.0)
-                    .sum();
-            int minutesEffectif = activitesUtilisateur.stream()
-                    .mapToInt(a -> a.getTemps() != null ? a.getTemps() : 0)
-                    .sum();
-            long nbActivites = activitesUtilisateur.size();
-
-            double moyenneDistanceKm = nbActivites > 0 ? totalKm / nbActivites : 0.0;
-            int moyenneTempsMinutes = nbActivites > 0 ? (int) Math.round((double) minutesEffectif / nbActivites) : 0;
-            double allureMoyenne = totalKm > 0 ? minutesEffectif / totalKm : 0.0;
-
-            LocalDate premierJourMois = aujourdhui.withDayOfMonth(1);
-            List<Activite> activitesMois = activitesUtilisateur.stream()
-                    .filter(a -> a.getDate() != null
-                            && !a.getDate().isBefore(premierJourMois)
-                            && !a.getDate().isAfter(aujourdhui))
-                    .toList();
-            double moisDistanceKm = activitesMois.stream()
-                    .mapToDouble(a -> a.getDistance() != null ? a.getDistance() : 0.0)
-                    .sum();
-            int moisMinutes = activitesMois.stream()
-                    .mapToInt(a -> a.getTemps() != null ? a.getTemps() : 0)
-                    .sum();
-            long moisActivites = activitesMois.size();
-
-            LocalDate lundi = aujourdhui.with(DayOfWeek.MONDAY);
-            LocalDate dimanche = lundi.plusDays(6);
-            List<Activite> activitesSemaine = activitesUtilisateur.stream()
-                    .filter(a -> a.getDate() != null
-                            && !a.getDate().isBefore(lundi)
-                            && !a.getDate().isAfter(dimanche))
-                    .toList();
-            double distanceSemaineKm = activitesSemaine.stream()
-                    .mapToDouble(a -> a.getDistance() != null ? a.getDistance() : 0.0)
-                    .sum();
-            long activitesSemaineCount = activitesSemaine.size();
-
-            model.addAttribute("totalDistanceKm", totalKm);
-            model.addAttribute("totalTempsMinutes", minutesEffectif);
-            model.addAttribute("nombreActivites", nbActivites);
-            model.addAttribute("kcalEstime", Math.round(minutesEffectif * 5.5));
-            model.addAttribute("moyenneDistanceKm", moyenneDistanceKm);
-            model.addAttribute("moyenneTempsMinutes", moyenneTempsMinutes);
-            model.addAttribute("allureMoyenne", formatAllure(allureMoyenne));
-            model.addAttribute("moisDistanceKm", moisDistanceKm);
-            model.addAttribute("moisTempsMinutes", moisMinutes);
-            model.addAttribute("moisActivites", moisActivites);
-            model.addAttribute("activitesSemaineCount", activitesSemaineCount);
-            model.addAttribute("distanceSemaineKm", distanceSemaineKm);
-
-            Optional<Map.Entry<com.jocf.sporttrack.enumeration.TypeSport, Long>> sportFavori =
-                    activitesUtilisateur.stream()
-                            .filter(a -> a.getTypeSport() != null)
-                            .collect(Collectors.groupingBy(
-                                    Activite::getTypeSport,
-                                    LinkedHashMap::new,
-                                    Collectors.counting()))
-                            .entrySet()
-                            .stream()
-                            .max(Map.Entry.comparingByValue());
-            sportFavori.ifPresentOrElse(entry -> {
-                model.addAttribute("sportFavori", entry.getKey().name().replace('_', ' '));
-                model.addAttribute("sportFavoriSeances", entry.getValue());
-            }, () -> {
-                model.addAttribute("sportFavori", "Aucun");
-                model.addAttribute("sportFavoriSeances", 0L);
-            });
-
-            Activite derniereActivite = activitesUtilisateur.stream().findFirst().orElse(null);
-            if (derniereActivite != null && derniereActivite.getDate() != null) {
-                long joursDepuisDerniereSeance = ChronoUnit.DAYS.between(derniereActivite.getDate(), aujourdhui);
-                model.addAttribute("derniereSeanceDate", derniereActivite.getDate());
-                model.addAttribute("derniereSeanceJours", joursDepuisDerniereSeance);
-                model.addAttribute("derniereSeanceRelativeTexte", formatRelativeDays(joursDepuisDerniereSeance));
-                model.addAttribute("derniereSeanceTexte", formatDateFr(derniereActivite.getDate()));
-            } else {
-                model.addAttribute("derniereSeanceDate", null);
-                model.addAttribute("derniereSeanceJours", null);
-                model.addAttribute("derniereSeanceRelativeTexte", null);
-                model.addAttribute("derniereSeanceTexte", "Aucune séance");
-            }
-
-            model.addAttribute("totalDistanceTexte", formatDistance(totalKm));
-            model.addAttribute("totalTempsTexte", formatDuration(minutesEffectif));
-            model.addAttribute("moyenneDistanceTexte", formatDistance(moyenneDistanceKm));
-            model.addAttribute("moyenneTempsTexte", formatDuration(moyenneTempsMinutes));
-            model.addAttribute("moisDistanceTexte", formatDistance(moisDistanceKm));
-            model.addAttribute("moisTempsTexte", formatDuration(moisMinutes));
-            model.addAttribute("distanceSemaineTexte", formatDistance(distanceSemaineKm));
-            model.addAttribute("kcalEstimeTexte", Math.round(minutesEffectif * 5.5) + " kcal");
-
-            List<Challenge> defis = challengeRepository.findByParticipants_IdOrderByDateFinAsc(user.getId())
-                    .stream()
-                    .filter(c -> c.getDateFin() == null || !c.getDateFin().toLocalDate().isBefore(aujourdhui))
-                    .toList();
-            model.addAttribute("defisEnCours", defis);
-            model.addAttribute("defisEnCoursAffichage", defis.stream()
-                    .map(defi -> buildChallengeCard(defi, aujourdhui))
-                    .toList());
-
+            populateUserStats(model, user);
+            populateActivityStats(model, activitesUtilisateur, aujourdHui);
+            populateFavoriteSport(model, activitesUtilisateur);
+            populateLastActivity(model, activitesUtilisateur, aujourdHui);
+            populateChallengeCards(model, user, aujourdHui);
             model.addAttribute("dernieresActivites", activitesUtilisateur.stream().limit(5).toList());
-
-            int[] minutesParJour = new int[7];
-            for (Activite a : activitesSemaine) {
-                if (a.getDate() != null && a.getTemps() != null && a.getTemps() > 0) {
-                    int index = a.getDate().getDayOfWeek().getValue() - 1;
-                    minutesParJour[index] += a.getTemps();
-                }
-            }
-            String[] labelsJours = {"Lun", "Mar", "Mer", "Jeu", "Ven", "Sam", "Dim"};
-            List<Map<String, Object>> weekPoints = new ArrayList<>();
-            for (int i = 0; i < 7; i++) {
-                Map<String, Object> point = new LinkedHashMap<>();
-                point.put("label", labelsJours[i]);
-                point.put("minutes", minutesParJour[i]);
-                weekPoints.add(point);
-            }
-            model.addAttribute("semaineActivite", weekPoints);
-            
+            model.addAttribute("semaineActivite", buildWeeklyActivitySeries(activitesUtilisateur, aujourdHui));
             return "dashboard";
         } catch (Exception e) {
             return "redirect:/Utilisateur/";
         }
+    }
+
+    private static boolean isAuthenticated(Authentication authentication) {
+        return authentication != null && authentication.isAuthenticated();
+    }
+
+    private void populateUserStats(Model model, Utilisateur user) {
+        model.addAttribute("level", user.getNiveauExperience());
+        model.addAttribute("xpBarPercent", user.getPourcentageBarreExperience());
+        model.addAttribute("xpDansNiveau", user.getXpDepuisSeuilNiveauExperience());
+        model.addAttribute("xpMaxNiveau", user.getXpSeuilProchainNiveauExperience());
+        model.addAttribute("hpBarPercent", (double) user.getHpNormalise());
+    }
+
+    private void populateActivityStats(Model model, List<Activite> activitesUtilisateur, LocalDate aujourdHui) {
+        double totalKm = activitesUtilisateur.stream()
+                .mapToDouble(a -> a.getDistance() != null ? a.getDistance() : 0.0)
+                .sum();
+        int minutesEffectif = activitesUtilisateur.stream()
+                .mapToInt(a -> a.getTemps() != null ? a.getTemps() : 0)
+                .sum();
+        long nbActivites = activitesUtilisateur.size();
+
+        double moyenneDistanceKm = nbActivites > 0 ? totalKm / nbActivites : 0.0;
+        int moyenneTempsMinutes = nbActivites > 0 ? (int) Math.round((double) minutesEffectif / nbActivites) : 0;
+        double allureMoyenne = totalKm > 0 ? minutesEffectif / totalKm : 0.0;
+
+        LocalDate premierJourMois = aujourdHui.withDayOfMonth(1);
+        List<Activite> activitesMois = filterActivitesParDate(activitesUtilisateur, premierJourMois, aujourdHui);
+        double moisDistanceKm = activitesMois.stream()
+                .mapToDouble(a -> a.getDistance() != null ? a.getDistance() : 0.0)
+                .sum();
+        int moisMinutes = activitesMois.stream()
+                .mapToInt(a -> a.getTemps() != null ? a.getTemps() : 0)
+                .sum();
+        long moisActivites = activitesMois.size();
+
+        LocalDate lundi = aujourdHui.with(DayOfWeek.MONDAY);
+        LocalDate dimanche = lundi.plusDays(6);
+        List<Activite> activitesSemaine = filterActivitesParDate(activitesUtilisateur, lundi, dimanche);
+        double distanceSemaineKm = activitesSemaine.stream()
+                .mapToDouble(a -> a.getDistance() != null ? a.getDistance() : 0.0)
+                .sum();
+        long activitesSemaineCount = activitesSemaine.size();
+
+        model.addAttribute("totalDistanceKm", totalKm);
+        model.addAttribute("totalTempsMinutes", minutesEffectif);
+        model.addAttribute("nombreActivites", nbActivites);
+        model.addAttribute("kcalEstime", Math.round(minutesEffectif * 5.5));
+        model.addAttribute("moyenneDistanceKm", moyenneDistanceKm);
+        model.addAttribute("moyenneTempsMinutes", moyenneTempsMinutes);
+        model.addAttribute("allureMoyenne", formatAllure(allureMoyenne));
+        model.addAttribute("moisDistanceKm", moisDistanceKm);
+        model.addAttribute("moisTempsMinutes", moisMinutes);
+        model.addAttribute("moisActivites", moisActivites);
+        model.addAttribute("activitesSemaineCount", activitesSemaineCount);
+        model.addAttribute("distanceSemaineKm", distanceSemaineKm);
+        model.addAttribute("totalDistanceTexte", formatDistance(totalKm));
+        model.addAttribute("totalTempsTexte", formatDuration(minutesEffectif));
+        model.addAttribute("moyenneDistanceTexte", formatDistance(moyenneDistanceKm));
+        model.addAttribute("moyenneTempsTexte", formatDuration(moyenneTempsMinutes));
+        model.addAttribute("moisDistanceTexte", formatDistance(moisDistanceKm));
+        model.addAttribute("moisTempsTexte", formatDuration(moisMinutes));
+        model.addAttribute("distanceSemaineTexte", formatDistance(distanceSemaineKm));
+        model.addAttribute("kcalEstimeTexte", Math.round(minutesEffectif * 5.5) + " kcal");
+    }
+
+    private void populateFavoriteSport(Model model, List<Activite> activitesUtilisateur) {
+        Optional<Map.Entry<com.jocf.sporttrack.enumeration.TypeSport, Long>> sportFavori =
+                activitesUtilisateur.stream()
+                        .filter(a -> a.getTypeSport() != null)
+                        .collect(Collectors.groupingBy(
+                                Activite::getTypeSport,
+                                LinkedHashMap::new,
+                                Collectors.counting()))
+                        .entrySet()
+                        .stream()
+                        .max(Map.Entry.comparingByValue());
+        sportFavori.ifPresentOrElse(entry -> {
+            model.addAttribute("sportFavori", entry.getKey().name().replace('_', ' '));
+            model.addAttribute("sportFavoriSeances", entry.getValue());
+        }, () -> {
+            model.addAttribute("sportFavori", "Aucun");
+            model.addAttribute("sportFavoriSeances", 0L);
+        });
+    }
+
+    private void populateLastActivity(Model model, List<Activite> activitesUtilisateur, LocalDate aujourdHui) {
+        Activite derniereActivite = activitesUtilisateur.stream().findFirst().orElse(null);
+        if (derniereActivite != null && derniereActivite.getDate() != null) {
+            long joursDepuisDerniereSeance = ChronoUnit.DAYS.between(derniereActivite.getDate(), aujourdHui);
+            model.addAttribute("derniereSeanceDate", derniereActivite.getDate());
+            model.addAttribute("derniereSeanceJours", joursDepuisDerniereSeance);
+            model.addAttribute("derniereSeanceRelativeTexte", formatRelativeDays(joursDepuisDerniereSeance));
+            model.addAttribute("derniereSeanceTexte", formatDateFr(derniereActivite.getDate()));
+            return;
+        }
+
+        model.addAttribute("derniereSeanceDate", null);
+        model.addAttribute("derniereSeanceJours", null);
+        model.addAttribute("derniereSeanceRelativeTexte", null);
+        model.addAttribute("derniereSeanceTexte", "Aucune séance");
+    }
+
+    private void populateChallengeCards(Model model, Utilisateur user, LocalDate aujourdHui) {
+        List<Challenge> defis = challengeRepository.findByParticipants_IdOrderByDateFinAsc(user.getId())
+                .stream()
+                .filter(c -> c.getDateFin() == null || !c.getDateFin().toLocalDate().isBefore(aujourdHui))
+                .toList();
+        model.addAttribute("defisEnCours", defis);
+        model.addAttribute("defisEnCoursAffichage", defis.stream()
+                .map(defi -> buildChallengeCard(defi, aujourdHui))
+                .toList());
+    }
+
+    private List<Map<String, Object>> buildWeeklyActivitySeries(List<Activite> activitesUtilisateur, LocalDate aujourdHui) {
+        List<Activite> activitesSemaine = filterActivitesParDate(activitesUtilisateur, aujourdHui.with(DayOfWeek.MONDAY), aujourdHui.with(DayOfWeek.MONDAY).plusDays(6));
+        int[] minutesParJour = new int[7];
+        for (Activite activite : activitesSemaine) {
+            if (activite.getDate() != null && activite.getTemps() != null && activite.getTemps() > 0) {
+                int index = activite.getDate().getDayOfWeek().getValue() - 1;
+                minutesParJour[index] += activite.getTemps();
+            }
+        }
+        String[] labelsJours = {"Lun", "Mar", "Mer", "Jeu", "Ven", "Sam", "Dim"};
+        List<Map<String, Object>> weekPoints = new ArrayList<>();
+        for (int i = 0; i < 7; i++) {
+            Map<String, Object> point = new LinkedHashMap<>();
+            point.put("label", labelsJours[i]);
+            point.put("minutes", minutesParJour[i]);
+            weekPoints.add(point);
+        }
+        return weekPoints;
+    }
+
+    private static List<Activite> filterActivitesParDate(List<Activite> activites, LocalDate debut, LocalDate fin) {
+        return activites.stream()
+                .filter(a -> a.getDate() != null
+                        && !a.getDate().isBefore(debut)
+                        && !a.getDate().isAfter(fin))
+                .toList();
     }
 
     private Map<String, Object> buildChallengeCard(Challenge defi, LocalDate aujourdHui) {
@@ -198,25 +222,26 @@ public class DashboardController {
         LocalDate debut = defi.getDateDebut() != null ? defi.getDateDebut().toLocalDate() : null;
         LocalDate fin = defi.getDateFin() != null ? defi.getDateFin().toLocalDate() : null;
         if (debut != null && fin != null) {
-            card.put("dates", formatDateCourte(debut) + " - " + formatDateCourte(fin));
-            card.put("progression", calculerProgression(defi, aujourdHui));
-            card.put("progressionTexte", calculerProgression(defi, aujourdHui) + "% accompli");
-            card.put("statutTemps", calculerStatutTemps(debut, fin, aujourdHui));
+            int progression = calculerProgression(defi, aujourdHui);
+            card.put(CARD_DATES, formatDateCourte(debut) + " - " + formatDateCourte(fin));
+            card.put(CARD_PROGRESSION, progression);
+            card.put(CARD_PROGRESSION_TEXTE, progression + "% accompli");
+            card.put(CARD_STATUT_TEMPS, calculerStatutTemps(debut, fin, aujourdHui));
         } else if (debut != null) {
-            card.put("dates", "Début : " + formatDateCourte(debut));
-            card.put("progression", 0);
-            card.put("progressionTexte", "En attente");
-            card.put("statutTemps", "Date de fin non définie");
+            card.put(CARD_DATES, "Début : " + formatDateCourte(debut));
+            card.put(CARD_PROGRESSION, 0);
+            card.put(CARD_PROGRESSION_TEXTE, CARD_PROGRESS_PENDING);
+            card.put(CARD_STATUT_TEMPS, "Date de fin non définie");
         } else if (fin != null) {
-            card.put("dates", "Fin : " + formatDateCourte(fin));
-            card.put("progression", 0);
-            card.put("progressionTexte", "En attente");
-            card.put("statutTemps", calculerStatutTemps(null, fin, aujourdHui));
+            card.put(CARD_DATES, "Fin : " + formatDateCourte(fin));
+            card.put(CARD_PROGRESSION, 0);
+            card.put(CARD_PROGRESSION_TEXTE, CARD_PROGRESS_PENDING);
+            card.put(CARD_STATUT_TEMPS, calculerStatutTemps(null, fin, aujourdHui));
         } else {
-            card.put("dates", "Dates non définies");
-            card.put("progression", 0);
-            card.put("progressionTexte", "En attente");
-            card.put("statutTemps", "Aucune date disponible");
+            card.put(CARD_DATES, "Dates non définies");
+            card.put(CARD_PROGRESSION, 0);
+            card.put(CARD_PROGRESSION_TEXTE, CARD_PROGRESS_PENDING);
+            card.put(CARD_STATUT_TEMPS, "Aucune date disponible");
         }
 
         card.put("participants", defi.getParticipants() != null ? defi.getParticipants().size() : 0);
@@ -277,9 +302,13 @@ public class DashboardController {
         if (aujourdHui.isBefore(debut)) {
             return 0;
         }
-        long totalJours = Math.max(1, ChronoUnit.DAYS.between(debut, fin) + 1);
-        long joursEcoules = Math.min(totalJours, ChronoUnit.DAYS.between(debut, aujourdHui) + 1);
-        return (int) Math.max(0, Math.min(100, Math.round(100.0 * joursEcoules / totalJours)));
+        long totalJours = ChronoUnit.DAYS.between(debut, fin) + 1;
+        if (totalJours <= 0) {
+            totalJours = 1;
+        }
+        long joursEcoules = ChronoUnit.DAYS.between(debut, aujourdHui) + 1;
+        int progression = (int) Math.round(100.0 * joursEcoules / totalJours);
+        return Math.clamp(progression, 0, 100);
     }
 
     private static String calculerStatutTemps(LocalDate debut, LocalDate fin, LocalDate aujourdHui) {
